[package]
name = "rand_hash"
version = "0.1.0-rc3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dfns/rand_hash"
description = "Cryptographically-secure pseudo-random generator based on cryptographic hash function"

categories = ["cryptography", "no-std", "no-std::no-alloc"]
keywords = ["csprng", "random", "hash", "entropy"]

[dependencies]
digest = { version = "0.10", default-features = false }
udigest = { version = "0.2.0-rc3", default-features = false, features = ["digest", "inline-struct"] }

rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.8"
rand_dev = "0.1"

sha2 = { version = "0.10", default-features = false }

udigest = { version = "0.2.0-rc3", default-features = false, features = ["digest", "inline-struct", "derive"] }

